ingress/ngnix-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: ingress 
spec:
  selector: 
    matchLabels: 
      name: nginx-ingress
  template: 
    metadata:
      labels:
        name: nginx-ingress
    spec:
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.33.0
          args:
            - /nginx-ingress-controller
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
